# FinalYearProjectFacialInterface

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: eventQueue.h.676429F2172B949C.idx  facialInterface.cpp.1C55DB0F3EB42538.idx  facialInterface.h.F9C21307BBBF3922.idx  httplib.h.3C163BEE63CFCA23.idx  json.hpp.A1B6D4550D500333.idx  main.cpp.D91D216A72DF4987.idx  main.cpp.E47601A84426BAF0.idx  server.cpp.C21F0899842132CA.idx  server.h.1F840CD451D37DE0.idx
res/: FaceModel.glb  shader.frag  shader.vert
src/: audio.cpp  audio.h  eventQueue.h  facialInterface.cpp  facialInterface.h  main.cpp  network.cpp  network.h  server.cpp  server.h  utils.cpp  utils.h
